# HackerRank

./: .gitignore  README.md  capitalise_string.py  diagonal_difference.py  finding_percentae.py  insertion_sort_1.py  loopInvariant.py  prime.py  pyproject.toml
30daysCode/: class_vs_instance.py
Algorithm/: Encryption.ipynb  append_and_delete.py  array_splitting.py  ballContainer.ipynb  bigger_is_greater.ipynb  bigger_is_greater.py  extra_long_factorial.py  grading_student.py  kangaroo.py  library_fine.py  logic_rotate_matrix.ods  mat_rotation.py  non_divisible_subset.py  queens_attack.py  sherlock_and_square.py
Algorithm/climbingLeaderboard/: leaderboard.py
Misc/: condotional.py  divisible_sum_pairs.py  insertion_sort_2.py  non_divisible_subset.py
Practice_Hard/maximize_it/: inputs.txt  problem.org  solution.py
challenges/: string_split_join.py  swap_case.py
projectEuler/prob_1/: sol_1.py
projectEuler/prob_10/: solution10.py
projectEuler/prob_12/: sol_12_2.py  sol_12_2.py~  solution12.py  solution12.py~
projectEuler/prob_13/: sol_13.py
projectEuler/prob_14/: collatz_3_unittest.py  coltz_seq_3.py
projectEuler/prob_17/: numToWords_unittest.py  num_to_words.py
projectEuler/prob_18/: sol_18.py
projectEuler/prob_19/: zellar_count_sundays.py
projectEuler/prob_2/: sol_2.py  sol_2_alt.py
projectEuler/prob_20/: factorial_digit_sum.py
projectEuler/prob_22/: names_score.py
projectEuler/prob_23/: abundant.py
projectEuler/prob_24/: factoradic.py  factoradic_2.py  factoradic_2.py~
projectEuler/prob_3/: sol_3.py  solution2.py
(+13 files in other folders)
