[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = "Hacker Rank"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyflakes = "^2.5.0"
isort = "^5.10.1"
pytest = "^7.1.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
